--- a/source/app/partials/views/template/_menu.html.erb
+++ b/source/app/partials/views/template/_menu.html.erb
@@ -1,12 +1,8 @@
-<script id="menu_tmpl" type="text/html">
-	{{#menuItems}}
-		{{> menu_item_tmpl}}
-	{{/menuItems}}
+<script id="header_menu_tmlp" type="text/html">
+	{{#items}}
+		{{> header_menu_item_tmlp}}
+	{{/items}}
 </script>
-<script id="menu_item_tmpl" type="text/html">
-	<div class="menu_item_title">{{title}}</div>
-	<div class="menu_item_description">{{description}}</div>
-	<div class="menu_item_route"><a href="#{{videoRoute}}">{{videoRoute}}</a></div>
-	<div class="menu_item_route"><a href="#{{detailRoute}}">{{detailRoute}}</a></div>
-	</br>
+<script id="header_menu_item_tmlp" type="text/html">
+	<a href="#{{route}}"><h1>{{title}}</h1></a>
 </script>
