--- a/source/layout.erb
+++ b/source/layout.erb
@@ -5,15 +5,16 @@
 	</head>
 	<body class="<%= page_classes %>">
 		<%= yield %>
-		<%= partial "app/partials/views/structure/main" %>
 		<%= partial "app/partials/views/structure/header" %>
+		<%= partial "app/partials/views/structure/main" %>
 		<%= partial "app/partials/views/structure/footer" %>
+		<%= partial "app/partials/views/template/menu" %>
 		<script>
 			if(typeof(window.ontouchstart) !== 'undefined') {
 				document.write('<script src=javascripts/vendor/zepto.min.js><\/script>');
 			} else {
-				document.write('<script src=javascripts/vendor/jquery-1.7.2.js><\/script>');
-				document.write('<script src=javascripts/vendor/jquery.transit.js><\/script>');
+				document.write('<script src=javascripts/vendor/jquery-1.8.2.min.js><\/script>');
+				document.write('<script src=javascripts/vendor/jquery.transit-0.1.3.min.js><\/script>');
 			}
 		</script>
 		<%= javascript_include_tag "app-js" %>
