--- a/source/app/partials/views/structure/_main.html.erb
+++ b/source/app/partials/views/structure/_main.html.erb
@@ -1,1 +1,6 @@
-<div id="main"></div>
+<div id="main">
+	<article id="main-work" class="main-article">Work</article>
+	<article id="main-blogs" class="main-article">Blogs</article>
+	<article id="main-about" class="main-article">About</article>
+	<article id="main-contact" class="main-article">Contact</article>
+</div>
