--- a/source/app/partials/views/structure/_header.html.erb
+++ b/source/app/partials/views/structure/_header.html.erb
@@ -1,1 +1,12 @@
-<header id="header"></header>
+<header id="header">
+	<div id="header-menu"></div>
+	<h1><p>Kristen Kong</p></h1>
+	<h2><p>Art Director</p></h2>
+	<div id="header-social">
+		<ul>
+			<li id="header-social-linkedin">
+				<a href="" target="_blank"><p class="hide-text">Linkedin</p></a>
+			</li>
+		</ul>
+	</div>
+</header>
