--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,6 +10,7 @@
 	<meta name="keywords" content="project, boilerplate">
 	<%= partial "app/partials/social/og-tags" %>
 	<%= partial "app/partials/util/mobile-redirect" %>
+	<%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Petit+Formal+Script|Josefin+Sans|Josefin+Slab:400,600" %>
 	<%= stylesheet_link_tag "site.css" %>
 	<!--[if IE]>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/ie_only.css" />
@@ -20,3 +21,11 @@
 	<%= partial "app/partials/util/unique-session" %>
 	<%= partial "app/partials/util/cache-buster" %>
 <% end %>
+
+<div id="wrapper">
+	<%= partial "app/partials/views/structure/header" %>
+	<%= partial "app/partials/views/structure/main" %>
+	<%= partial "app/partials/views/structure/footer" %>
+<div>
+
+<%= partial "app/partials/views/template/menu" %>
