Got some of the layout for work/fun done.

--- a/source/app/partials/views/structure/_header.html.erb
+++ b/source/app/partials/views/structure/_header.html.erb
@@ -5,7 +5,7 @@
 	<div id="header-social">
 		<ul>
 			<li id="header-social-linkedin">
-				<a href="" target="_blank"><p class="hide-text">Linkedin</p></a>
+				<a href="http://www.linkedin.com/pub/kristen-m-kong/11/ba5/530" target="_blank"><p class="hide-text">Linkedin</p></a>
 			</li>
 		</ul>
 	</div>
