--- a/source/stylesheets/header.scss
+++ b/source/stylesheets/header.scss
@@ -4,6 +4,7 @@ $paddingLeft: 24;
   clear: both;
   background: $colorTeal url('../images/header-gradient.png') repeat-x;
   color: $colorWhite;
+  width: $siteWidth + px;
   height: 135px;
 
   #header-menu {
@@ -13,9 +14,6 @@ $paddingLeft: 24;
   .header-menu-item {
     float: left;
     padding: 0 80px 0 0;
-    a {
-      text-decoration: none;
-    }
     h3 {
       font-size: 16px;
       text-transform: uppercase;
