--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -22,6 +22,8 @@
 	<%= partial "app/partials/util/cache-buster" %>
 <% end %>
 
+<%= partial "app/partials/views/structure/overlay" %>
+
 <div id="wrapper">
 	<%= partial "app/partials/views/structure/header" %>
 	<%= partial "app/partials/views/structure/main" %>
