--- a/source/stylesheets/header.scss
+++ b/source/stylesheets/header.scss
@@ -1,11 +1,12 @@
 $paddingLeft: 24;
+$paddingTop: 39;
 
 #header {
   clear: both;
   background: $colorTeal url('../images/header-gradient.png') repeat-x;
   color: $colorWhite;
   width: $siteWidth + px;
-  height: 135px;
+  height: $headerHeight + px;
 
   #header-menu {
     padding: 10px 0 0 $paddingLeft + px;
@@ -48,7 +49,7 @@ $paddingLeft: 24;
       clear: both;
       float: left;
       font-size: 33px;
-      padding: 40px 0 0 $paddingLeft + px;
+      padding: ($paddingTop + 7) + px 0 0 $paddingLeft + px;
       font-weight: 400;
     }
   }
@@ -58,13 +59,13 @@ $paddingLeft: 24;
       font-size: 30px;
       font-family: $fontFamilyScript;
       font-weight: 100;
-      padding: 39px 0 0 $paddingLeft + px;
+      padding: ($paddingTop + 5) + px 0 0 $paddingLeft + px;
     }
   }
   
   #header-social {
     float: right;
-    padding: 39px 10px 0 0;
+    padding: ($paddingTop + px) 10px 0 0;
     
     #header-social-linkedin {
       p {
