--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -4,6 +4,7 @@
 @import 'fonts';
 @import 'common';
 @import 'media-queries';
+@import 'overlay';
 @import 'header';
 @import 'main';
 @import 'footer';
