Added some images.

--- a/source/app/partials/views/template/_menu.html.erb
+++ b/source/app/partials/views/template/_menu.html.erb
@@ -3,7 +3,7 @@
 	<ul>
 	{{#data}}
 		<li id={{dom}} class="header-menu-item header-menu-item-inactive">
-			<a href="#{{route}}">
+			<a href="#{{route}}" target="_self">
 				<h3><strong>{{title}}</strong></h3>
 			</a>
 		</li>
