Styles video player a bit.

--- a/source/app/partials/views/structure/_overlay.html.erb
+++ b/source/app/partials/views/structure/_overlay.html.erb
@@ -2,8 +2,10 @@
 	<div id="overlay-wrapper">
 		<div id="overlay-content">
 			<div id="overlay-video-container">
-				<div id="video-player-target">
-					<!-- Replaced by YouTube Player -->
+				<div id="overlay-video-size">
+					<div id="video-player-target">
+						<!-- Replaced by YouTube Player -->
+					</div>
 				</div>
 			</div>
 			<div id="overlay-image-container">
