--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -15,4 +15,24 @@
       padding: 5px 0 0 0;
     }
   }
+  
+  #main-about {
+    width: $siteWidth + px;
+    height: 378px;
+    background: $colorWhite;
+    font-size: 17px;
+    
+    img { 
+      float: left;
+    }
+    h5 {
+      float: left;
+      padding: 55px 0 0 80px;
+    }
+    a>p {
+      float: left;
+      padding: 50px 0 0 80px;
+      color: $colorTeal;
+    }
+  }
 }
