--- a/source/stylesheets/common.scss
+++ b/source/stylesheets/common.scss
@@ -25,8 +25,9 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 /* Varibales */
 
 $siteWidth: 960;
-$headerHeight: 135;
-$contentHeight: 430;
+$topHeight: 36;
+$headerHeight: 136;
+$contentHeight: 650;
 
 /* Essential Classes */
 
