Added mail and soem fixes for HTML in copy.

--- a/source/app/partials/views/structure/_header.html.erb
+++ b/source/app/partials/views/structure/_header.html.erb
@@ -4,6 +4,9 @@
 	<h2><p>Art Director</p></h2>
 	<div id="header-social">
 		<ul>
+			<li id="header-social-mail">
+				<a href="mailto:info@kristenkong.com?subject=Kristen Kong | Art Director | Request to Contact" target="_blank"><p class="hide-text">Mail</p></a>
+			</li>
 			<li id="header-social-linkedin">
 				<a href="http://www.linkedin.com/pub/kristen-m-kong/11/ba5/530" target="_blank"><p class="hide-text">Linkedin</p></a>
 			</li>
