--- a/source/app/partials/views/template/_menu.html.erb
+++ b/source/app/partials/views/template/_menu.html.erb
@@ -55,7 +55,7 @@
 	{{/data}}
 </script>
 <script id="main_title_tmpl" type="text/html">
-	<h4><p>{{title}}</p></h4>
-	<h5><p>{{description}}</p></h5>
+	<h4><p>{{{title}}}</p></h4>
+	<h5><p>{{{description}}}</p></h5>
 </script>
 <!-- footer -->
