--- a/source/stylesheets/overlay.scss
+++ b/source/stylesheets/overlay.scss
@@ -51,14 +51,20 @@ $videoPlayerLeft: ($siteWidth - $videoPlayerWidth) / 2;
       width: $siteWidth + px;
       height: 100px;
       background: $colorWhite;
-      padding: 0 10px 0 10px;
+      
+      a {
+        color: $colorTeal;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
       
       h4 {
-        padding: 10px 0 0 0;
+        padding: 10px 0 0px 10px;
         color: #727272;
       }
       h5 {
-        padding: 20px 0 0 0;
+        padding: 20px 0 10px 10px;
       }
     }
   }
@@ -80,7 +86,7 @@ $videoPlayerLeft: ($siteWidth - $videoPlayerWidth) / 2;
       width: 100%;
       height: 100%;
       opacity: .50;
-      background: $colorWhite;
+      background: $colorWhite * .9;
     }
   }
 }
