--- a/source/app/partials/views/structure/_overlay.html.erb
+++ b/source/app/partials/views/structure/_overlay.html.erb
@@ -1,5 +1,8 @@
 <div id="overlay">
 	<div id="overlay-wrapper">
+		<div id="overlay-close-container">
+			<!-- Contains close template -->
+		</div>
 		<div id="overlay-content">
 			<div id="overlay-video-container">
 				<div id="overlay-video-size">
