--- a/source/app/partials/views/template/_menu.html.erb
+++ b/source/app/partials/views/template/_menu.html.erb
@@ -44,6 +44,9 @@
 <script id="main_overlay_text_tmpl" type="text/html">
 	{{> main_title_tmpl}}
 </script>
+<script id="main_overlay_close_tmpl" type="text/html">
+	<a href="#{{parent.attributes.parent.attributes.route}}">Close</a>
+</script>
 <script id="main_overlay_cover_tmpl" type="text/html">
 	<a href="#{{parent.attributes.parent.attributes.route}}"><div id="overlay-background"></div></a>
 </script>
