--- a/source/stylesheets/overlay.scss
+++ b/source/stylesheets/overlay.scss
@@ -14,11 +14,26 @@ $videoPlayerLeft: ($siteWidth - $videoPlayerWidth) / 2;
     position: inherit;
     z-index: 3000;
     margin-left: 50%;
-    top: $topHeight + px;
+    // top: $topHeight + px;
     left: -($siteWidth / 2) + px;
+    
+    #overlay-close-container {
+      position: inherit;
+      width: $siteWidth + px;
+      
+      a {
+        color: $colorWhite;
+        text-transform: uppercase;
+        float: right;
+        padding: 10px 10px 0 10px;
+        height: $topHeight + px;
+        background: $colorTeal;
+      }
+    }
     
     #overlay-content {
       position: inherit;
+      top: $topHeight + px;
       width: $siteWidth + px;
       height: $contentHeight + px;
       background: $colorWhite;
