--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,7 +10,7 @@
 	<meta name="keywords" content="project, boilerplate">
 	<%= partial "app/partials/social/og-tags" %>
 	<%= partial "app/partials/util/mobile-redirect" %>
-	<%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Petit+Formal+Script|Josefin+Sans|Josefin+Slab:400,600" %>
+	<%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Petit+Formal+Script|Josefin+Slab:300,400" %>
 	<%= stylesheet_link_tag "site.css" %>
 	<!--[if IE]>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/ie_only.css" />
