Fixed a couple things.

--- a/source/app/partials/views/structure/_header.html.erb
+++ b/source/app/partials/views/structure/_header.html.erb
@@ -1,7 +1,7 @@
 <header id="header">
 	<div id="header-menu"></div>
-	<h1><p>Kristen Kong</p></h1>
-	<h2><p>Art Director</p></h2>
+	<h1>Kristen Kong</h1>
+	<h2><span>A</span>rt <span>D</span>irector</h2>
 	<div id="header-social">
 		<ul>
 			<li id="header-social-mail">
