--- a/source/stylesheets/header.scss
+++ b/source/stylesheets/header.scss
@@ -2,6 +2,7 @@ $paddingLeft: 24;
 $paddingTop: 39;
 
 #header {
+  display: none;
   position: fixed;
   clear: both;
   background: $colorTeal url('../images/header-gradient.png') repeat-x;
