--- a/source/app/partials/views/structure/_overlay.html.erb
+++ b/source/app/partials/views/structure/_overlay.html.erb
@@ -3,6 +3,12 @@
 		<div id="overlay-close-container">
 			<!-- Contains close template -->
 		</div>
+		<div id="overlay-next-container">
+			<!-- Contains next template -->
+		</div>
+		<div id="overlay-last-container">
+			<!-- Contains last template -->
+		</div>
 		<div id="overlay-content">
 			<div id="overlay-video-container">
 				<div id="overlay-video-size">
