--- a/source/layout.erb
+++ b/source/layout.erb
@@ -5,14 +5,7 @@
 	</head>
 	<body class="<%= page_classes %>">
 		<%= yield %>
-		<script>
-			if(typeof(window.ontouchstart) !== 'undefined') {
-				document.write('<script src=javascripts/vendor/zepto.min.js><\/script>');
-			} else {
-				document.write('<script src=javascripts/vendor/jquery-1.8.2.min.js><\/script>');
-				document.write('<script src=javascripts/vendor/jquery.transit-0.1.3.min.js><\/script>');
-			}
-		</script>
+		<%= partial "app/partials/responsive/$" %>
 		<%= javascript_include_tag "app-js" %>
 	</body>
 </html>
